--- a/src/assets/font/fontStyle.css
+++ b/src/assets/font/fontStyle.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: font;
-    src: url('@/assets/font/MelaroundRegular-OGGOo.otf') format('opentype');
+    src: url('@/assets/font/NanumGothic-Regular.ttf') format('truetype');
 }
 
 body, body .el-button {
