--- a/src/assets/css/elTab.css
+++ b/src/assets/css/elTab.css
@@ -1,3 +1,15 @@
+.el-tabs__nav.is-left{
+    width: 100% !important;
+}
+.el-tabs__header.is-left{
+    min-width: 100px !important;
+}
+.el-tabs__item.is-active{
+    background-color: #dddddd !important;
+}
+.el-tabs__item:hover{
+    background-color: #dddddd !important;
+}
 .el-tabs__content{
     height: 100%;
 }
