update procure list page

--- a/src/assets/css/elTab.css
+++ b/src/assets/css/elTab.css
@@ -13,3 +13,7 @@
 .el-tabs__content{
     height: calc(100% - 20px) !important;
 }
+/* procureListBody */
+#tabTable .el-tabs__content {
+    height: calc(100% - 69px) !important;
+}
