--- a/src/assets/css/elInput.css
+++ b/src/assets/css/elInput.css
@@ -18,3 +18,29 @@
     -moz-appearance: textfield;
 }
 
+
+.el-textarea {
+    .el-textarea__inner::-webkit-scrollbar {
+        width: 7px;
+        height: 7px;
+    }
+    .el-textarea__inner::-webkit-scrollbar-track {
+        background-color: #ffffff;
+    }
+    .el-textarea__inner::-webkit-scrollbar-thumb {
+        background-color: rgba(144, 147, 153, 0.3);
+        border-radius: 5px;
+        border: 1px solid #f1f1f1;
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    }
+    .el-textarea__inner::-webkit-scrollbar-thumb:hover {
+        background-color: rgba(144, 147, 153, 0.3);
+    }
+    .el-textarea__inner::-webkit-scrollbar-thumb:active {
+        background-color: rgba(144, 147, 153, 0.3);
+    }
+    .el-textarea__inner::-webkit-scrollbar-corner {
+        background-color: #ffffff;
+    }
+}
+
