--- a/src/assets/css/elCard.css
+++ b/src/assets/css/elCard.css
@@ -12,6 +12,9 @@
     border-radius: 5px;
     border: 1px solid #bbbbbb;
 }
+.cardHoverShadow{
+    transition: background-color 0.3s ease;
+}
 .newInnerCard{
     margin: 2px;
     border-radius: 5px;
